--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-messageboard"
+		"url": "https://github.com/casti004/messageboard.git"
 	},
 	"keywords": [
 		"node",
